--- a/child/index.html
+++ b/child/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <script src="js/iframe-resizer.child.js"></script>
+    <script src="../js/iframe-resizer.child.js"></script>
     <div id="container">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel metus
